--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="nav-content">
       <div class="nav-brand">
         <span class="brand-icon">&lt;/&gt;</span>
-        <span class="brand-text">JohnDoe</span>
+        <span class="brand-text">Prajwal Gunjal</span>
       </div>
       
       <div class="nav-links" [class.nav-open]="isMenuOpen">
