--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       
-      <div class="header-visual">
+      <div class="header-visual ">
         <div class="code-block">
           <div class="code-header">
             <div class="dots">
@@ -34,6 +34,16 @@
   <span class="property">skills</span>: [<span class="string">'Angular'</span>, <span class="string">'C#'</span>,<span class="string">'go'</span>,<span class="string">'C++'</span>],
   <span class="property">status</span>: <span class="string">'Available'</span>
 &#125;;</code></pre>
+                <app-two-way-binding
+                  [name]="name"
+                  [title]="title"
+                  [skills]="skills"
+                  [passion]="passion"
+                  (nameChange)="updateName($event)"
+                  (titleChange)="updateTitle($event)"
+                  (skillsChange)="updateSkills($event)"
+                  (passionChange)="updatePassion($event)">
+                </app-two-way-binding>
           </div>
         </div>
       </div>
