--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <app-navbar></app-navbar>
 <main>
+  <router-outlet></router-outlet>
+</main>
+<app-footer></app-footer>
+<!-- <app-navbar></app-navbar>
+<main>
   <app-header></app-header>
   <app-about></app-about>
   <app-skills></app-skills>
 </main>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
