--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,6 +1,6 @@
 .footer-section {
   background: var(--background-secondary);
-  padding: 0rem 0 1rem;
+  padding: 4rem 0 2rem;
   border-top: 1px solid var(--border-color);
 }
 
@@ -143,7 +143,7 @@
 }
 
 .footer-bottom {
- // border-top: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
   padding-top: 2rem;
 }
 
