--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -174,3 +174,18 @@
     font-size: 2rem;
   }
 }
+.social-media {
+  margin-top: 2rem;
+  text-align: center;
+}
+.social-link {
+  display: inline-block;
+  margin: 0 10px;
+  font-size: 2rem;
+  color: #333;
+  transition: color 0.2s;
+  text-decoration: none;
+}
+.social-link:hover {
+  color: #0077b5; /* Example: LinkedIn blue, change as needed */
+}
