--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,8 +11,8 @@
         <p class="description">{{ description }}</p>
         
         <div class="header-actions">
-          <a href="#about" class="btn btn-primary">About Me</a>
-          <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+          <a routerLink="/about"  class="btn btn-primary">About Me</a>
+          <a routerLink="/contact" class="btn btn-secondary">Get In Touch</a>
         </div>
       </div>
       
