--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -40,7 +40,7 @@
           <!-- New Button Added -->
           <button (click)="openContactForm()" class="btn btn-contact-form">
             <span class="btn-icon">📝</span>
-            Fill Contact Form
+            Template-Driven Form
           </button>
         </div>
       </div>
