--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -42,6 +42,10 @@
             <span class="btn-icon">📝</span>
             Template-Driven Form
           </button>
+           <button (click)="openReactiveForm()" class="btn btn-contact-form reactive-form">
+              <span class="btn-icon">⚡</span>
+              Reactive Form
+            </button>
         </div>
       </div>
 
