Commiting changes for the week 3 assignment :- learning HTTP Modules (Put,Patch,Post,Delete)

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,26 +1,3 @@
-<!-- <nav class="navbar">
-  <div class="container">
-    <div class="nav-content">
-      <div class="nav-brand">
-        <span class="brand-icon">&lt;/&gt;</span>
-        <span class="brand-text">Prajwal Gunjal</span>
-      </div>
-      
-      <div class="nav-links" [class.nav-open]="isMenuOpen">
-        <a href="#home" class="nav-link" (click)="closeMenu()">Home</a>
-        <a href="#about" class="nav-link" (click)="closeMenu()">About</a>
-        <a href="#skills" class="nav-link" (click)="closeMenu()">Skills</a>
-        <a href="#contact" class="nav-link" (click)="closeMenu()">Contact</a>
-      </div>
-      
-      <button class="nav-toggle" (click)="toggleMenu()" [class.active]="isMenuOpen">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-    </div>
-  </div>
-</nav> -->
 <nav class="navbar">
   <div class="container">
     <div class="nav-content">
@@ -33,6 +10,7 @@
         <a routerLink="/header" class="nav-link" (click)="closeMenu()">Home</a>
         <a routerLink="/about" class="nav-link" (click)="closeMenu()">About</a>
         <a routerLink="/skills" class="nav-link" (click)="closeMenu()">Skills</a>
+        <a routerLink="/http-demo" class="nav-link" (click)="closeMenu()">HTTP Client Demo</a>
         <a routerLink="/contact" class="nav-link" (click)="closeMenu()">Contact</a>
       </div>
       
