--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
+<div class="">
 <app-navbar></app-navbar>
-<main>
+<main class="">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
-<!-- <app-navbar></app-navbar>
-<main>
-  <app-header></app-header>
-  <app-about></app-about>
-  <app-skills></app-skills>
-</main>
-<app-footer></app-footer> -->
+</div>
